feat: Implement most of the application
